[tool.poetry]
name = "codecollection-blogger"
version = "0.1.0"
description = ""
authors = ["Kyle Forster <kyle.forster@runwhen.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
robotframework = "^7.2.2"
langgraph = "^0.3.27"
langchain-openai = "^0.3.12"
langchain-core = "^0.3.49"
dataclasses-json = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
